--- a/mainpage/main.css
+++ b/mainpage/main.css
@@ -63,7 +63,7 @@ h6 {
 .navbar-brand {
     font-family: 'Texturina', serif;
     font-style: italic;
-    font-size: xx-large;
+    font-size: large;
     padding: 0%;
     margin-left: 20%;
     cursor: pointer;
@@ -302,8 +302,9 @@ h4 {
     .navbar-brand {
         font-family: 'Texturina', serif;
         font-style: italic;
-        font-size: xx-large;
+        font-size: large;
         padding: 0%;
+        float: left;
     }
 
     h1,
