--- a/blogpost/blogpost.css
+++ b/blogpost/blogpost.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Texturina:wght@100&display=swap');
-@import url(C:/Users/drago/Desktop/Udacity-Blog-project/shared/images.css);
+@import url(../shared/images.css);
 @import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 
 body{
@@ -47,6 +47,7 @@ body{
     font-size: 64px;
 }
 
+h1,
 h2,
 h3,
 h5,
@@ -140,7 +141,6 @@ h6 {
     margin-left: 8%;
 }
 
-
 .sidebar{
     box-shadow: 0px 3px 19px #00000041;
     height: 47%;
@@ -159,7 +159,6 @@ h4 {
     padding-left: 20px;
     font-family: 'Texturina', serif;
 }    
-
 
 .date-list {
     border-top: 1px solid goldenrod;
@@ -188,7 +187,6 @@ h4 {
 .mid-text {
     margin-left: 35%;
 }
-
 
 .footer {
     color: #000000;
@@ -357,5 +355,4 @@ h4 {
         margin-bottom: 0%;
         position: relative;
     }
-
 }
