added captions and readjusted sizing to fit them

--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Texturina:wght@100&display=swap');
-@import url(../shared/images.css);
+@import url(../css/images.css);
 @import url('https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap');
 
 body{
